# microbit

i2c/: Cargo.toml  build.rs
i2c/src/: main.rs
led_roulette/: Cargo.toml  commands.md
led_roulette/src/: main.rs
timer/: Cargo.toml
timer/src/: buttons.rs  main.rs  number.rs  round.rs
uart/: Cargo.toml  commands.md
uart/src/: main.rs  serial_setup.rs
