[package]
name = "led_roulette"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
debug = true
opt-level = 3

# [dependencies.microbit-v2]
# version = "0.13.0"
# optional = true

# [dependencies.microbit]
# version = "0.13.0"
# optional = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
panic-rtt-target = "0.1.3"
microbit-v2 = "0.13.0"

# rtt-target = "0.5.0"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }


# [dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
# rtt-target = "0.5.0"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

# [features]
# v2 = ["microbit-v2"]
# v1 = ["microbit"]
