[package]
name = "uart"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
debug = true
opt-level = 3

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
rtt-target = "0.5.0"
panic-rtt-target = "0.1.3"
nb = "1.1.0"
heapless = "0.8.0"
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"
